idea/testData/checkerWithErrorTypes/full/NamespaceAsExpression.jet
namespace root

namespace a {

}

val x = <!EXPRESSION_EXPECTED_NAMESPACE_FOUND, UNRESOLVED_REFERENCE!>a<!>
val y2 = <!NAMESPACE_IS_NOT_AN_EXPRESSION!>namespace<!>
